feat: complement whole structure
