# spring-ai-alibaba-graph/spring-ai-alibaba-graph-studio/src/main/java/com/alibaba/cloud/ai/api/DSLAPI.java
@@ -9,6 +9,8 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Optional;
+
 @Tag(name = "DSL", description = "the DSL API")
 public interface DSLAPI {
 
@@ -16,16 +18,19 @@ public interface DSLAPI {
 
 	AppSaver getAppSaver();
 
-	@Operation(summary = "export app to dsl", tags = { "dsl" })
+	@Operation(summary = "export app to dsl", tags = { "DSL" })
 	@GetMapping(value = "/export/{id}", produces = "application/json")
 	default R<String> exportDSL(@PathVariable("id") String id, @RequestParam("dialect") String dialect) {
-		return R.success(getAdapter(dialect).exportDSL(id, getAppSaver()));
+		App app = Optional.ofNullable(getAppSaver().get(id)).orElseThrow(()-> new IllegalArgumentException("App not found: " + id));
+		return R.success(getAdapter(dialect).exportDSL(app));
 	}
 
-	@Operation(summary = "import app from dsl", tags = { "dsl" })
+	@Operation(summary = "import app from dsl", tags = { "DSL" })
 	@PostMapping(value = "/import", produces = "application/json")
 	default R<App> importDSL(@RequestBody DSLParam param) {
-		return R.success(getAdapter(param.getDialect()).importDSL(param.getContent()));
+		App app = getAdapter(param.getDialect()).importDSL(param.getContent());
+		app = getAppSaver().save(app);
+		return R.success(app);
 	}
 
 }
