# spring-ai-alibaba-graph/spring-ai-alibaba-graph-studio/src/main/java/com/alibaba/cloud/ai/model/workflow/nodedata/StartNodeData.java
@@ -1,8 +1,8 @@
-package com.alibaba.cloud.ai.model.workflow.node.data;
+package com.alibaba.cloud.ai.model.workflow.nodedata;
 
 import com.alibaba.cloud.ai.model.Variable;
 import com.alibaba.cloud.ai.model.VariableSelector;
-import com.alibaba.cloud.ai.model.workflow.node.WorkflowNodeData;
+import com.alibaba.cloud.ai.model.workflow.NodeData;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 import lombok.experimental.Accessors;
@@ -12,7 +12,7 @@ import java.util.List;
 @EqualsAndHashCode(callSuper = true)
 @Data
 @Accessors(chain = true)
-public class StartNodeData extends WorkflowNodeData {
+public class StartNodeData extends NodeData {
 
 	private List<StartInput> startInputs;
 
